gpu: Fix format/internalformat confusion

Several code paths in the command decoder were creating textures with
format == internalformat. However, many internalformat values are not
valid as format values. This was not checked before
http://crrev.com/c/1368832 , but now it results in errors. This change
calls TextureManager::ExtractFormatFromStorageFormat to get the correct
format for the specified internalformat.

Fixes video display in the YouTube Android app on some Chrome OS
devices.

Bug: 920967, 809237, 628064

Change-Id: I93c6449286094d895f45572fa0db5dbead1797ea
Reviewed-on: https://chromium-review.googlesource.com/c/1425728
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624907}
Former-commit-id: b270239f4ec4ab1a00332bdf3fda4bb5cb0eaecb